# cartplole-nmpc-cppad-pinocchio-demo

./: MUJOCO_LOG.TXT  README.md  test.csv
.cache/clangd/index/: array_safety.h.44C2F2160116B46C.idx  control_node.cpp.88A9102FFF06E682.idx  control_node.h.DFC7F9476A06955F.idx  cppadpino.cpp.680E986D1FD4B6F7.idx  doubleintger.cpp.1BB4C180C53C2D12.idx  doubleintger.h.318589CDD7C9F521.idx  glfw_adapter.cc.09D69046FA2FF7E4.idx  glfw_adapter.h.E4FC2D2BF46991D9.idx  glfw_dispatch.cc.962EA27C371E2DA2.idx  glfw_dispatch.h.4445142F541D4CD2.idx  main.cc.CD737E39F5C3A071.idx  main.cpp.CDCD24901D536D29.idx  mjdata.h.0446E52CEBE9FFBE.idx  mjexport.h.6C29E6DBDD80D4DF.idx  mjmacro.h.65DD2DF082047C3D.idx  mjmodel.h.CF52476E951DBBE3.idx  mjplugin.h.186FAC004AC18CC4.idx  mjrender.h.72A16ECAB3A96A21.idx  mjthread.h.5F9F4DD75B44E75A.idx  mjtnum.h.999266A31C4E2CAB.idx  mjui.h.A6C70C72E46777AA.idx  mjvisualize.h.B18F7F658E8C8CFC.idx  mjxmacro.h.22DBBFA773005BF4.idx  mujoco.h.FC51D4D4361F959B.idx  platform_ui_adapter.cc.7227B268CCECDF2E.idx  platform_ui_adapter.h.601C35935F5B7AC1.idx  simulate.cc.7165A96AF7CDB801.idx  simulate.h.7A4C6932AEF0EFC4.idx  simulate_node.cpp.16A6E81F7FB5040C.idx  simulate_node.h.7547256E8AE90F62.idx  state.hpp.ECA1F5DFBD39816F.idx  state__builder.hpp.63C2A6AE0967EA26.idx  state__struct.hpp.596732DFB4C7C813.idx  state__traits.hpp.6962F7F2FD139A15.idx  torque.hpp.59EC24F5DF717803.idx  torque__builder.hpp.B6AFC9C2156E09AB.idx  torque__struct.hpp.B6CC7EDFF9C1B355.idx  torque__traits.hpp.B569CE2E76BA9FA8.idx
install/: local_setup.sh  setup.sh
install/control/lib/control/: control_node
install/control/share/control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/interface/share/interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/interface/share/interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_interface__rosidl_generator_cExport.cmake  export_interface__rosidl_generator_cppExport.cmake  export_interface__rosidl_generator_pyExport.cmake  interface__rosidl_typesupport_cExport.cmake  interface__rosidl_typesupport_introspection_cExport.cmake  (+2 more)
install/manage/share/manage/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simulate/lib/simulate/: simulate_node
install/simulate/share/simulate/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/control/: CMakeLists.txt
src/control/include/control/: control_node.h  cppadpino.h  doubleintger.h
src/control/src/: control_node.cpp  cppadpino.cpp  doubleintger.cpp  main.cpp
src/interface/: CMakeLists.txt
src/interface/msg/: Torque.msg
src/manage/: CMakeLists.txt
src/manage/config/: config.yaml  simulate_cfg.yaml
src/manage/launch/: simulate.launch.py
src/models/inverted_pendulum/: cartpole.urdf  inverted_pendulum.xml  satellite.xml  scene.xml
src/models/satellite/: satellite.xml  scene.xml
src/simulate/: CMakeLists.txt
src/simulate/include/simulate/: simulate.h  simulate_node.h
src/simulate/src/: glfw_adapter.cc  main.cc  simulate.cc  simulate_node.cpp
src/utils/: cppTypes.h  dynamics.cpp  dynamics.hpp  fsm_defs.h  kinematics.cpp  kinematics.h  orientation_tools.cpp  orientation_tools.h  param.h  state.h
(+46 files in other folders)
